--- a/ageusia.html
+++ b/ageusia.html
@@ -48,9 +48,11 @@
                     
                     <div class="project-description">
                         <p>
-                            Directing a short film inspired by Martin Scorsese for the "Ricette d'autore" theme was one of the most challenging yet exciting projects I’ve worked on. The goal was to reinterpret Scorsese’s cinematic style while integrating the preparation of a culinary dish. I oversaw everything from script development to directing, working closely with actors, the cameraman, and the team to bring this unique concept to life. I also handled the video editing during post-production and contributed to the visual identity of YellowCab Production.                        </p>
+                            Ageusia is a short film inspired by the cinematic language of Martin Scorsese, particularly Taxi Driver and The King of Comedy. The project reinterprets his visual and narrative codes to explore ambition, alienation, and obsession within the world of haute cuisine, translating urban tension into an intimate psychological conflic
+                        </p>
                         <p>
-                            The film received awards for Best Editing, Best Film, and Best Direction among other class projects, highlighting the dedication and collaboration behind the project.                        </p>
+                            The work covered all stages of film production, from concept development and screenplay writing to shooting, editing, and post-production. It also included the creation of the fictional studio YellowCab Production, designed with a complete visual identity and animated logo. The film received recognition among class projects, earning awards for Best Editing, Best Film, and Best Direction.
+                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
