--- a/beazley.html
+++ b/beazley.html
@@ -48,11 +48,8 @@
                     
                     <div class="project-description">
                         <p>
-                            Beazley is a global insurance company known for hosting curated events in iconic locations around the world. For their annual Milan stop, they chose the rooftop cocktail terrace of Maio Restaurant, overlooking the Duomo.
-                        </p>
-                        <p>
-                            I worked as the sole videographer for the event, handling filming, editing, color grading, and post-production to deliver the official aftermovie.
-                        </p>
+                            Beazley is a global insurance company that organizes curated events in iconic locations worldwide. For the annual Milan edition, the event took place on the rooftop terrace of Maio Restaurant, overlooking the Duomo. The project involved the complete production of the official aftermovie, encompassing filming, editing, color grading, and post-production to capture the atmosphere and identity of the occasion.                        </p>
+                        
                     </div>
 
                     <div class="credits-toggle-container">
