--- a/brutalism.html
+++ b/brutalism.html
@@ -48,8 +48,7 @@
                     
                     <div class="project-description">
                         <p>
-                            A small collection of posters designed in a brutalist style, exploring my personal aesthetic and experimenting with different expressions of my approach to typography and graphic design. A visual research that reflects my creative process and my search for a distinctive voice in design.
-                         </p>
+                            A collection of posters designed in a brutalist style, exploring personal aesthetics through typography and graphic composition. The project functions as visual research, experimenting with structure, contrast, and hierarchy to define a distinctive and evolving graphic language.                         </p>
                     </div>
 
                     <div class="credits-toggle-container">
