--- a/cometa.html
+++ b/cometa.html
@@ -48,11 +48,9 @@
                     
                     <div class="project-description">
                         <p>
-                           Cometa, founded in 1986 in Como, is a visionary educational community where work becomes a pathway to dignity, empowerment, and personal transformation. This documentary reportage explores how Cometa uplifts young people facing challenges, including those with disabilities, by blending tradition, innovation, and inclusion. 
-                        </p>
+                            Founded in 1986 in Como, Cometa is an educational community where work becomes a means of empowerment and personal transformation. This documentary reportage explores how the organization supports young people, including those with disabilities, through initiatives that merge craftsmanship, education, and inclusion.                        </p>
                         <p>
-                            The story highlights Contrada degli Artigiani, where crafts like woodworking and restoration inspire growth and purpose; Il Pane di Sandro, a bakery that merges professional training with social inclusion; and Anagramma, a café in the gardens of Villa Bernasconi, where hospitality fosters education and belonging.
-                        </p>
+                            The narrative focuses on Contrada degli Artigiani, where traditional crafts such as woodworking and restoration foster growth and purpose; Il Pane di Sandro, a bakery combining professional training with social inclusion; and Anagramma, a café within the gardens of Villa Bernasconi, where hospitality becomes a tool for learning and belonging.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
