--- a/exnova.html
+++ b/exnova.html
@@ -44,12 +44,9 @@
                     
                     <div class="project-description">
                         <p>
-                            Ex-Nova is a speculative design and typography project developed within the Type is Money theme, exploring the relationship between type and currency. It begins with a bold, utopian question: What if there were a single universal currency, symbolically uniting all cultures of the world?
-From this premise unfolds the imagined journey of four designers traveling across the globe, collecting banknotes to analyze their forms, alphabets, signs, and visual identities.
-                        </p>
+                            Developed within the speculative design project Type is Money, Ex-Nova explores the intersection of typography and currency through a utopian lens. It poses a central question: What if a single universal currency could symbolically unite all cultures of the world? The narrative follows four imagined designers traveling across the globe, collecting and analyzing banknotes to study their forms, alphabets, symbols, and visual systems.                        </p>
                         <p>
-                            The result is a 64-page editorial object that blends typographic research, graphic design, and narrative construction. At its core lies the formal analysis of scripts and graphic elements from international currencies, distilled into the creation of Ex-Nova—a fictional banknote that aims to balance local aesthetics with global aspirations.​​​​​
-                        </p>
+                            The outcome is a 64-page publication that merges typographic research, graphic design, and speculative storytelling. At its core stands Ex-Nova, a fictional banknote synthesizing fragments of global currencies into one cohesive artifact, a visual balance between local identity and collective aspiration.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
