--- a/intercept.html
+++ b/intercept.html
@@ -48,12 +48,10 @@
                     
                     <div class="project-description">
                         <p>
-                            This project was part of the WeSayStop communication campaign by Politecnico di Milano, focused on raising awareness about gender-based violence and discrimination. Our team addressed the issue of Sexting Coercion. As part of the research phase, we produced a video intercept to explore perceptions of the topic within the university, interviewing around 80 students to assess their awareness and sensitivity.
-                        </p>
-                        <br>
+                            Developed within the We Say Stop campaign at Politecnico di Milano, this project focuses on raising awareness of gender-based violence and discrimination through the specific lens of sexting coercion. The research phase involved producing a video intercept to investigate how students perceive and understand the issue, gathering insights through interviews with around eighty participants.                        </p>
+                        
                         <p>
-                            As video-maker, I directed the filming and captured portraits of all participants to enhance our research and documentation. The guerrilla-style interviews featured direct questions on sexting coercion, with an interactive element allowing students to express their emotions freely. This project deepened our understanding of the issue and helped create a compelling visual narrative for awareness.
-                        </p>
+                            The video adopts a guerrilla-style approach, combining on-site interviews with expressive portrait photography to document authentic reactions and emotions. Through its visual and narrative construction, the project contributes to a deeper understanding of psychological pressure in digital spaces and supports broader communication efforts promoting consent and respect.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
