--- a/mtp600.html
+++ b/mtp600.html
@@ -44,11 +44,9 @@
                     
                     <div class="project-description">
                         <p>
-                            MTP600 is a typographic editorial project developed as a brand extension proposal for CEME, a company specializing in technical pumps and valves. The publication redefines the visual identity of industrial components by presenting the MTP600 pump as a graphic subject with aesthetic and design value.
-                        </p>
+                            MTP600 is a typographic editorial project conceived as a brand extension proposal for CEME, a company specializing in technical pumps and valves. The publication reinterprets industrial communication by transforming the MTP600 peripheral pump into a graphic and narrative object, revealing the aesthetic potential of mechanical design.                        </p>
                         <p>
-                            Featuring a brutalist, black-and-white layout, the project transforms technical specifications into a contemporary visual language through bold typography, threshold effects, and dynamic compositions. Designed as part of a collectible monthly series, it offers a new narrative tool for the company—parallel to corporate communication and focused on revealing the unseen design behind industrial production.​​​
-                        </p>
+                            Featuring a brutalist, monochromatic layout, the project translates technical data into a bold visual language through typography, threshold effects, and rhythmic composition. Designed as part of a collectible editorial series, MTP600 introduces a new narrative tool for the company, one that celebrates the technical legacy of industrial production from a contemporary and expressive perspective.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
