--- a/next.html
+++ b/next.html
@@ -48,10 +48,8 @@
                     
                     <div class="project-description">
                         <p>
-                            NEXT Cooling SA is the result of a complete visual identity renewal following the merger of Nooter Eriksen’s NEXT with IWC Cooling. This rebranding project focused on modernizing the visual identity and communication strategy to position the newly formed entity as an innovative leader in the industrial cooling sector.                        </p>
-                        <p>
-                            The work encompassed a comprehensive brand redesign, including a logo relook, defining the brand identity and establishing guidelines, and creating mockups for key physical applications. The primary objective was to create a flexible, distinctive system capable of supporting the merged company's growth and reflecting its future-oriented vision.                        </p>
-                    </div>
+                            NEXT Cooling SA is a rebranding project developed after the merger of Nooter Eriksen’s NEXT with IWC Cooling, aimed at redefining the company’s visual identity and positioning it as an innovative leader in the industrial cooling sector. The project focused on unifying two corporate cultures under a modern and coherent brand system that communicates efficiency, reliability, and forward-thinking design.                        <p>
+                                The work included a complete visual identity renewal, from logo redesign and brand guidelines to applications and physical mockups. The resulting identity establishes a flexible and distinctive visual language, designed to support the company’s evolution and reflect its technological and future-oriented vision.                    </div>
 
                     <div class="credits-toggle-container">
                         <h2 class="credits-toggle-title" id="credits-toggle">
