--- a/sextingcoercion.html
+++ b/sextingcoercion.html
@@ -44,11 +44,9 @@
                     
                     <div class="project-description">
                         <p>
-                            As part of the We Say Stop campaign about gender-based violence, this project addresses the hidden issue of Sexting Coercion, shedding light on a term often misunderstood or ignored. Targeting the student community at Politecnico di Milano, the initiative challenges the normalization of manipulation and pressured consent in digital spaces, reinforcing the right to say no without guilt, fear, or blame.
-                        </p>
+                            Developed within the We Say Stop campaign against gender-based violence at Politecnico di Milano, Sexting Coercion addresses a form of psychological pressure that often goes unnoticed. The project exposes the mechanisms of manipulation and forced consent in digital interactions, challenging their normalization and promoting the right to refuse without guilt or fear.                        </p>
                         <p>
-                            By fostering awareness and respect for personal boundaries, the campaign creates space for reflection and dialogue. It empowers students to recognize coercion, resist manipulation, and advocate for healthy, consensual interactions in both digital and intimate relationships.
-                        </p>
+                            The campaign was built on thorough research into both the phenomenon and its target audience, resulting in an integrated visual communication system. It includes posters and their kinetic versions, a motion graphic video, an informational booklet, an Instagram channel, a podcast, and additional materials such as stickers. Through cohesive visual identity and branding, the project fosters awareness, reflection, and open dialogue on consent and respect in digital spaces.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
