--- a/urbanvisions.html
+++ b/urbanvisions.html
@@ -44,10 +44,8 @@
                     
                     <div class="project-description">
                         <p>
-                            For this project, my team and I delved into the legacy of public utility graphics, focusing on Albe Steiner's social design and its impact on ISIA Urbino. We explored how Steiner’s ideas, carried forward by students like Massimo Dolcini, shaped modern public design. This research culminated in a meta three-dimensional exhibition titled "Urban Visions," connecting Steiner’s and Dolcini’s work with contemporary digital urban spaces and interactive design.
-                        <p>
-                            My contributions included writing the research text and designing the book layout, drawing inspiration from Steiner's functional Swiss style and the public signage central to our study.
-                        </p>
+                            Urban Visions is an editorial project exploring the legacy of civic design and public utility graphics, with a focus on the work of Albe Steiner, Massimo Dolcini, and the ISIA Urbino tradition. The research investigates how social design principles evolved from mid-20th-century civic graphics into contemporary visual languages, linking historical content and artifacts with present-day communication systems.                        <p>
+                                The project culminates in a prototype for a three-dimensional installation and a publication that reinterprets Steiner’s and Dolcini’s approaches through modern editorial design. Drawing inspiration from functional Swiss aesthetics and urban signage, Urban Visions examines the dialogue between visual form, public space, and the social role of the designer.                        </p>
                     </div>
 
                     <div class="credits-toggle-container">
