--- a/designweek.html
+++ b/designweek.html
@@ -48,11 +48,9 @@
                     
                     <div class="project-description">
                         <p>
-                            Milan Design Week is one of the most important global events for design and innovation. Each year, alongside the main Salone del Mobile exhibition, the Fuorisalone takes over various districts of Milan, transforming the city into a vibrant stage for exhibitions, art installations, and presentations of new projects and trends. It’s a unique opportunity to discover the latest in design, architecture, and art.
-                        </p>
+                            Milan Design Week is one of the world’s leading events dedicated to design and innovation. Each year, alongside the Salone del Mobile, the Fuorisalone transforms Milan into a dynamic stage for exhibitions, installations, and new creative expressions.                        </p>
                         <p>
-                            Here is a small collection of my photographic reportage from the 2025 Milan Design Week, offering a glimpse into the dynamic and creative energy of the Fuorisalone.
-                    </div>
+                            This project presents a photographic reportage from the 2025 edition, capturing the energy, experimentation, and visual diversity that define the city during this unique week of design culture.                    </div>
 
                     <div class="credits-toggle-container">
                         <h2 class="credits-toggle-title" id="credits-toggle">
