--- a/beazley.html
+++ b/beazley.html
@@ -54,14 +54,14 @@
 
                     <div class="credits-toggle-container">
                         <h2 class="credits-toggle-title" id="credits-toggle">
-                            <span>►</span> Credits:
+                            <span>►</span> Credits & Info:
                         </h2>
                         
                         <div class="credits-content" id="credits-content">
                             <p>
                                 My role: Video making, Video Editing, Color grading.<br>
                                 Location: Maio Restaurant, Milan.<br>
-                                Client: Beazley Group.
+                                Client: Beazley Group. <br>
                                 <a href="https://www.linkedin.com/posts/beazley_beazley-eventobroker-financialines-activity-7336309562473410560-xN6A/?rcm=ACoAAEfFoCEBci_g4LH2f9W4nHE4-dANIywQeMo" target="_blank" rel="noopener noreferrer" style="color: black;">Beazley Event - LinkedIn</a><br>
                             </p>
                         </div>
