--- a/cometa.html
+++ b/cometa.html
@@ -55,7 +55,7 @@
 
                     <div class="credits-toggle-container">
                         <h2 class="credits-toggle-title" id="credits-toggle">
-                            <span>►</span> Credits:
+                            <span>►</span> Credits & Info:
                         </h2>
                         
                         <div class="credits-content" id="credits-content">
