--- a/lanzarote.html
+++ b/lanzarote.html
@@ -56,7 +56,7 @@
 
                     <div class="credits-toggle-container">
                         <h2 class="credits-toggle-title" id="credits-toggle">
-                            <span>►</span> Credits:
+                            <span>►</span> Credits & Info:
                         </h2>
                         
                         <div class="credits-content" id="credits-content">
