about me photography

--- a/aboutme.html
+++ b/aboutme.html
@@ -92,8 +92,9 @@
                     <p>Branding</p>
                     <p>UX/UI</p>
                     <p>Art Direction</p>
-                    <p>Filmmaking</p>
+                    <p>Film Making</p>
                     <p>Video Editing</p>
+                    <p>Photography</p>
                     <p>Social Media Content</p>
                     <p>Cinema</p>
                     <p>Sport</p>
