--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <section class="intro-text">
                 <h1>
-                    Welcome to the home made portfolio by Tommaso Patrini / Visual Designer, Photographer and Film maker, formed at Politecnico di Milano and based in Milan, Italy.
+                    Welcome to the home made portfolio by Tommaso Patrini, designer, photographer and film maker, formed at Politecnico di Milano and based in Milan, Italy.
                 </h1>
             </section>
         </div>
