--- a/urbanvisions.html
+++ b/urbanvisions.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
 
-                    <a href="design.html" class="back-to-projects-link">Back to projects</a>
+                    <a href="design.html" class="back-to-projects-link"><span class="back-arrow" aria-hidden="true">←</span> Back to projects</a>
                     
                 </div>
                 
