--- a/letmein.html
+++ b/letmein.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
 
-                    <a href="filmmaking.html" class="back-to-projects-link">Back to projects</a>
+                    <a href="filmmaking.html" class="back-to-projects-link"><span class="back-arrow" aria-hidden="true">←</span> Back to projects</a>
                     
                 </div>
                 
