--- a/streetframes.html
+++ b/streetframes.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
 
-                    <a href="photography.html" class="back-to-projects-link">Back to projects</a>
+                    <a href="photography.html" class="back-to-projects-link"><span class="back-arrow" aria-hidden="true">←</span> Back to projects</a>
                     
                 </div>
                 
