--- a/mtp600.html
+++ b/mtp600.html
@@ -81,7 +81,7 @@
 <img class="gallery-image" src="assets/images/projects/mtp/mtp-09.jpg" alt="MTP Img 10">
 
                     <div class="project-nav">
-                        <a href="brutalism.html" class="nav-prev">Prev</a>
+                        <a href="pixar.html" class="nav-prev">Prev</a>
                         
                         <a href="#top" class="nav-top">To Top</a> 
                         
