--- a/next.html
+++ b/next.html
@@ -72,7 +72,7 @@
                 
                 <div class="project-gallery-panel">
                     
-                    <img class="gallery-image" src="assets/images/cover/cover-next.jpg" alt="NEXT Img 0">
+                    <img class="gallery-image" src="assets/images/cover/cover-next.webp" alt="NEXT Img 0">
 <img class="gallery-image" src="assets/images/projects/next/next_01.jpg" alt="NEXT Img 01">
 <img class="gallery-image" src="assets/images/projects/next/next_02.jpg" alt="NEXT Img 02">
 <img class="gallery-image" src="assets/images/projects/next/next_03.jpg" alt="NEXT Img 03">
