oppure no e pixar in webp

--- a/pixar.html
+++ b/pixar.html
@@ -72,16 +72,16 @@
                 
                 <div class="project-gallery-panel">
                     
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-00.png" alt="Pixar Img 1">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-01.png" alt="Pixar Img 2">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-02.png" alt="Pixar Img 3">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-03.png" alt="Pixar Img 4">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-04.png" alt="Pixar Img 5">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-05.png" alt="Pixar Img 6">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-06.png" alt="Pixar Img 7">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-07.png" alt="Pixar Img 8">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-08.png" alt="Pixar Img 9">
-                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-09.png" alt="Pixar Img 10">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-00.webp" alt="Pixar Img 1">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-01.webp" alt="Pixar Img 2">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-02.webp" alt="Pixar Img 3">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-03.webp" alt="Pixar Img 4">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-04.webp" alt="Pixar Img 5">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-05.webp" alt="Pixar Img 6">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-06.webp" alt="Pixar Img 7">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-07.webp" alt="Pixar Img 8">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-08.webp" alt="Pixar Img 9">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-09.webp" alt="Pixar Img 10">
 
                     <div class="project-nav">
                         <a href="brutalism.html" class="nav-prev">Prev</a>
