--- a/design.html
+++ b/design.html
@@ -47,7 +47,7 @@
             <div class="project-grid-wrapper">
                 
                 <a href="pixar.html" class="project-item">
-                    <img class="project-cover" src="assets/images/cover/cover-pixar.png" alt="Pixar Cover">
+                    <img class="project-cover" src="assets/images/cover/cover-pixar.webp" alt="Pixar Cover">
                     <div class="project-title-area">
                         <span class="project-title">
                             <span class="project-name">Pixar © 3D Archive</span>
