--- a/filmmaking.html
+++ b/filmmaking.html
@@ -94,7 +94,7 @@
                     <img class="project-cover" src="assets/images/cover/cover-intercept.webp" alt="Intercept Cover">
                     <div class="project-title-area">
                         <span class="project-title">
-                            <span class="project-name">Intercept - Sexting Coercion</span>
+                            <span class="project-name">Sexting Coercion</span>
                             <span class="mobile-separator"> / </span>
                             <span class="project-type">Guerrilla Research</span>
                         </span>
