--- a/pixar.html
+++ b/pixar.html
@@ -43,7 +43,7 @@
                     <h1 class="project-title-main">Pixar © 3D Archive / Web Design / 2025</h1>
                     
                     <div class="project-description">
-                        <p><strong>⚠️ Page under development — images being updated</strong></p>
+                        <p>⚠️ Page under development — images being updated</p>
                         <p>
                             Pixar 3D Archive is an information and data-visualization project that explores Pixar's filmography through the lens of technological innovation. Rather than focusing solely on narrative worlds, the archive highlights the technical breakthroughs—algorithms, tools, and simulation techniques—that shaped each film. By mapping these developments over time, the website reveals how storytelling and engineering continually influence one another, making visible the innovations that have expanded the possibilities of 3D animation.
                         </p>
