--- a/aboutme.html
+++ b/aboutme.html
@@ -64,10 +64,11 @@
                     <h2>Experiences</h2>
                 </div>
                 <div class="cv-content-col">
-                    <p>Film maker for music video (Freelance).<br>Directed, camera operated, video edited and managed post-production for two singles by artist Camilla Buzzetti (Rewind, Let Me In), produced by Alta Vibe Music & Alari Park Studios. Featured on SkyTG24 website.</p>
-                    <p>Brand Designer (Freelance) – NEXT Cooling SA.<br>Designed the new logo and developed brand guidelines for the corporate rebranding of Next and Nooter Eriksen.</p>
-                    <p>Photographer (Freelance) – InTheCyber Group.<br>Official photographer for the corporate conference held at Palazzo dell' Aeronautica Militare, Milan.</p>
-                    <p>Event Staff (Volunteer) – Digital Design Days 2024.<br>Assisted as part of the staff during one day of the Digital Design Days (DDD), an event dedicated to technological innovation, held at Superstudio Più, Milan.</p>
+                    <p>Photographer (Freelance) – Eco3 Energy Solution S.r.l.<br>Official photographer for the corporate meeting & dinner held at MooM (Va) and Ristorante I Fontanili (Va).<br>2025.</p>
+                    <p>Film maker for music video (Freelance).<br>Directed, camera operated, video edited and managed post-production for two singles by artist Camilla Buzzetti (Rewind, Let Me In), produced by Alta Vibe Music & Alari Park Studios. Featured on SkyTG24 website.<br>2024-2025.</p>
+                    <p>Brand Designer (Freelance) – NEXT Cooling SA.<br>Designed the new logo and developed brand guidelines for the corporate rebranding of Next and Nooter Eriksen.<br>2024.</p>
+                    <p>Photographer (Freelance) – InTheCyber Group.<br>Official photographer for the corporate conference held at Palazzo dell' Aeronautica Militare, Milan.<br>2024.</p>
+                    <p>Event Staff (Volunteer) – Digital Design Days 2024.<br>Assisted as part of the staff during one day of the Digital Design Days (DDD), an event dedicated to technological innovation, held at Superstudio Più, Milan.<br>2024.</p>
                 </div>
             </section>
             
@@ -76,7 +77,7 @@
                     <h2>Awards</h2>
                 </div>
                 <div class="cv-content-col">
-                    <p>"Migliori matricole" Award – Winner.<br>Granted to top-performing students in their second year, based on academic results achieved during the first year of the Bachelor's degree. Politecnico di Milano, Italy.</p>
+                    <p>"Migliori matricole" Award – Winner.<br>Granted to top-performing students in their second year, based on academic results achieved during the first year of the Bachelor's degree. Politecnico di Milano, Italy.<br>2023.</p>
                 </div>
             </section>
             
