--- a/aboutme.html
+++ b/aboutme.html
@@ -53,9 +53,10 @@
                 </div>
                 
                 <div class="cv-content-col">
+                    <p>Aalto University, Helsinki, Finland.<br>Erasmus Exchange semester in New Media. <br>(Ongoing)</p>
                     <p>Politecnico di Milano, Italy.<br>Master's Degree in Communication Design. <br>(Ongoing)</p>
-                    <p>Politecnico di Milano, Italy.<br>Bachelor's Degree in Communication Design.<br>Final Grade: 110/110 (with honours).</p>
-                    <p>Liceo Scientifico Tirinnanzi, Legnano (Mi).<br>Scientific High School Diploma.<br>Final Grade: 98/100.</p>
+                    <p>Politecnico di Milano, Italy.<br>Bachelor's Degree in Communication Design.<br>Final Grade: 110/110 (with honours).<br>2022-2025.</p>
+                    <p>Liceo Scientifico Tirinnanzi, Legnano (Mi).<br>Scientific High School Diploma.<br>Final Grade: 98/100.<br>2017-2022</p>
                 </div>
             </section>
             
