--- a/aboutme.html
+++ b/aboutme.html
@@ -55,8 +55,8 @@
                 <div class="cv-content-col">
                     <p>Aalto University, Helsinki, Finland.<br>Erasmus Exchange semester in New Media. <br>(Ongoing)</p>
                     <p>Politecnico di Milano, Italy.<br>Master's Degree in Communication Design. <br>(Ongoing)</p>
-                    <p>Politecnico di Milano, Italy.<br>Bachelor's Degree in Communication Design.<br>Final Grade: 110/110 (with honours).<br>2022-2025.</p>
-                    <p>Liceo Scientifico Tirinnanzi, Legnano (Mi).<br>Scientific High School Diploma.<br>Final Grade: 98/100.<br>2017-2022</p>
+                    <p>Politecnico di Milano, Italy.<br>Bachelor's Degree in Communication Design.<br>Final Grade: 110/110 (with honours).<br>2022 – 2025.</p>
+                    <p>Liceo Scientifico Tirinnanzi, Legnano (Mi).<br>Scientific High School Diploma.<br>Final Grade: 98/100.<br>2017 – 2022</p>
                 </div>
             </section>
             
@@ -66,7 +66,7 @@
                 </div>
                 <div class="cv-content-col">
                     <p>Photographer (Freelance) – Eco3 Energy Solution S.r.l.<br>Official photographer for the corporate meeting & dinner held at MooM (Va) and Ristorante I Fontanili (Va).<br>2025.</p>
-                    <p>Film maker for music video (Freelance).<br>Directed, camera operated, video edited and managed post-production for two singles by artist Camilla Buzzetti (Rewind, Let Me In), produced by Alta Vibe Music & Alari Park Studios. Featured on SkyTG24 website.<br>2024-2025.</p>
+                    <p>Film maker for music video (Freelance).<br>Directed, camera operated, video edited and managed post-production for two singles by artist Camilla Buzzetti (Rewind, Let Me In), produced by Alta Vibe Music & Alari Park Studios. Featured on SkyTG24 website.<br>2024 – 2025.</p>
                     <p>Brand Designer (Freelance) – NEXT Cooling SA.<br>Designed the new logo and developed brand guidelines for the corporate rebranding of Next and Nooter Eriksen.<br>2024.</p>
                     <p>Photographer (Freelance) – InTheCyber Group.<br>Official photographer for the corporate conference held at Palazzo dell' Aeronautica Militare, Milan.<br>2024.</p>
                     <p>Event Staff (Volunteer) – Digital Design Days 2024.<br>Assisted as part of the staff during one day of the Digital Design Days (DDD), an event dedicated to technological innovation, held at Superstudio Più, Milan.<br>2024.</p>
