--- a/pixar.html
+++ b/pixar.html
@@ -82,6 +82,7 @@
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-07.webp" alt="Pixar Img 8">
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-08.webp" alt="Pixar Img 9">
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-09.webp" alt="Pixar Img 10">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-10.webp" alt="Pixar Img 10">
 
                     <div class="project-nav">
                         <a href="brutalism.html" class="nav-prev">Prev</a>
