--- a/pixar.html
+++ b/pixar.html
@@ -83,6 +83,8 @@
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-08.webp" alt="Pixar Img 9">
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-09.webp" alt="Pixar Img 10">
                     <img class="gallery-image" src="assets/images/projects/pixar/pixar-10.webp" alt="Pixar Img 11">
+                    <img class="gallery-image" src="assets/images/projects/pixar/pixar-11.webp" alt="Pixar Img 12">
+
                     <div class="project-nav">
                         <a href="brutalism.html" class="nav-prev">Prev</a>
                         
